# knowledge_ops

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  START_STOP.txt  clean.cmd  clean.ps1  clean.sh  restart.cmd  restart.ps1  restart.sh  run.cmd  run.ps1  run.sh  start.cmd  start.ps1  start.sh  stop.cmd  stop.ps1  stop.sh
.github/workflows/: ci.yml
docs/: DECISIONS.md  api.md  architecture.md
infra/: docker-compose.yml
services/frontend-web/: index.html  package-lock.json  package.json
services/frontend-web/src/: App.tsx  index.css
services/gateway-go/: Dockerfile  go.mod
services/gateway-go/cmd/gateway/: main.go  main_test.go
services/inference-python/: Dockerfile  README.md  pyproject.toml
services/inference-python/app/: config.py  deps.py  llm.py  main.py  rag.py  storage.py
services/inference-python/tests/: test_chat.py  test_health.py  test_rag.py  test_upload.py
services/ingestion-worker/: README.md
