[tool.poetry]
name = "knowledgeops-inference"
version = "0.1.0"
description = "KnowledgeOps inference service"
authors = ["KnowledgeOps"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.6"
uvicorn = {version = "^0.32.1", extras = ["standard"]}
httpx = "^0.27.2"
prometheus-client = "^0.21.1"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
black = "^25.1.0"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
